--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,13 @@
     </script>
 
     <!-- build:js(.) scripts/vendor.js -->
+    <script src="scripts/controllers/adminControllers/DashboardAdminCtrl.js"></script>
+    <script src="scripts/controllers/adminControllers/EncuestadoresCtrl.js"></script>
+    <script src="scripts/controllers/adminControllers/LoginAdminCtrl.js"></script>
+    <script src="scripts/controllers/encuestadorControllers/DashboardEncuestadorCtrl.js"></script>
+    <script src="scripts/controllers/encuestadorControllers/EncuestasCtrl.js"></script>
+    <script src="scripts/controllers/encuestadorControllers/LoginEncuestadorCtrl.js"></script>
+    <script src="scripts/controllers/encuestadorControllers/PreguntasCtrl.js"></script>
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
